<resources>
    <string name="app_name">MusicPlayer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="primaryColorPickerTitle">"主题色"</string>
    <string name="accentColorPickerTitle">"强调色"</string>
    <string name="sc_cloud">全网资源</string>
    <string name="sc_library">建议曲目</string>
    <string name="sc_list">歌曲列表</string>
    <string name="sc_randomPlay">"随机播放所有曲目"</string>
    <string name="preference_color_primary">"随机播放所有曲目"</string>

    <string-array name="start_page_entries">
        <item>建议曲目</item>
        <item>歌曲列表</item>
        <item>全网资源</item>
    </string-array>
    <string-array name="start_page_entries_value">
        <item>suggestion</item>
        <item>list</item>
        <item>cloud</item>
    </string-array>
    <string name="start_page_entries_default">suggestion</string>

    <string-array name="music_filtration_entries">
        <item>不显示小于30s的歌曲</item>
        <item>不显示小于45s的歌曲</item>
        <item>不显示小于60s的歌曲</item>
    </string-array>
    <string-array name="music_filtration_entries_value">
        <item>thirty</item>
        <item>forty_five</item>
        <item>sixty</item>
    </string-array>
    <string name="music_filtration_entries_default">thirty</string>

    <string-array name="preset_equalizer">
        <item>原音音效</item>
        <item>古典音乐</item>
        <item>舞曲音乐</item>
        <item>平淡音乐</item>
        <item>民谣音乐</item>
        <item>重金属</item>
        <item>嘻哈音乐</item>
        <item>爵士音乐</item>
        <item>流行音乐</item>
        <item>摇滚音乐</item>
        <item>电子音乐</item>
        <item>小型喇叭</item>
        <item>自定义</item>
    </string-array>
    <string-array name="suggestion_entries">
        <item>显示3首</item>
        <item>显示6首</item>
        <item>显示12首</item>
        <item>显示18首</item>
    </string-array>
    <string-array name="suggestion_entries_value">
        <item>three</item>
        <item>six</item>
        <item>twelve</item>
        <item>eighteen</item>
    </string-array>
    <string name="suggestion_entries_default">eighteen</string>

    <string-array name="color_entries">
        <item>红色</item>
        <item>粉色</item>
        <item>紫色</item>
        <item>深紫</item>
        <item>靛蓝</item>
        <item>蓝色</item>
        <item>亮蓝</item>
        <item>青色</item>
        <item>鸭绿</item>
        <item>绿色</item>
        <item>亮绿</item>
        <item>酸橙</item>
        <item>黄色</item>
        <item>琥珀</item>
        <item>橙色</item>
        <item>暗橙</item>
    </string-array>
    <string-array name="color_entries_value">
        <item>red</item>
        <item>pink</item>
        <item>purple</item>
        <item>deep_purple</item>
        <item>indigo</item>
        <item>blue</item>
        <item>light_blue</item>
        <item>cyan</item>
        <item>teal</item>
        <item>green</item>
        <item>light_green</item>
        <item>lime</item>
        <item>yellow</item>
        <item>amber</item>
        <item>orange</item>
        <item>deep_orange</item>
    </string-array>
    <string name="color_entries_primary_default">teal</string>
    <string name="color_entries_accent_default">pink</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
