<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/sc_randomplay"
        android:shortcutId="randomPlay"
        android:shortcutDisabledMessage="@string/sc_randomPlay"
        android:shortcutLongLabel="@string/sc_randomPlay"
        android:shortcutShortLabel="@string/sc_randomPlay">
        <intent
            android:action="android.intent.action.RANDOMPLAY"
            android:targetClass="com.example.lixiang.music_player.sc_randomPlay"
            android:targetPackage="com.example.lixiang.music_player"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/sc_library2"
        android:shortcutId="library"
        android:shortcutDisabledMessage="@string/sc_library"
        android:shortcutLongLabel="@string/sc_library"
        android:shortcutShortLabel="@string/sc_library">
        <intent
            android:action="android.intent.action.SUGGESTION"
            android:targetClass="com.example.lixiang.music_player.MainActivity"
            android:targetPackage="com.example.lixiang.music_player"/>
        <intent
            android:action="android.intent.action.SUGGESTION"
            android:targetClass="com.example.lixiang.music_player.sc_library"
            android:targetPackage="com.example.lixiang.music_player"/>

    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/sc_list2"
        android:shortcutId="list"
        android:shortcutDisabledMessage="@string/sc_list"
        android:shortcutLongLabel="@string/sc_list"
        android:shortcutShortLabel="@string/sc_list">
        <intent
            android:action="android.intent.action.SUGGESTION"
            android:targetClass="com.example.lixiang.music_player.MainActivity"
            android:targetPackage="com.example.lixiang.music_player"/>
        <intent
            android:action="android.intent.action.LIST"
            android:targetClass="com.example.lixiang.music_player.sc_list"
            android:targetPackage="com.example.lixiang.music_player"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/sc_cloud3"
        android:shortcutId="cloud"
        android:shortcutDisabledMessage="@string/sc_cloud"
        android:shortcutLongLabel="@string/sc_cloud"
        android:shortcutShortLabel="@string/sc_cloud">
        <intent
            android:action="android.intent.action.SUGGESTION"
            android:targetClass="com.example.lixiang.music_player.MainActivity"
            android:targetPackage="com.example.lixiang.music_player"/>
        <intent
            android:action="android.intent.action.RESOURCES"
            android:targetClass="com.example.lixiang.music_player.sc_cloud"
            android:targetPackage="com.example.lixiang.music_player"/>
    </shortcut>

</shortcuts>